...
    <string name="email_invalid">Invalid email</string>
    <string name="email_is_required">Email is required</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="forgot_your_password">"Forgot your password?</string>
    <string name="login">Login</string>
    <string name="login_password_hint">Password</string>
    <string name="looks_quite_here_say_hi_to_someone">Looks quiet here! Say hi to someone!</string>
    <string name="menu">Menu</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="new_message">New Message</string>
...
