package com.example.szakdolg;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;
import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.rule.GrantPermissionRule;
import androidx.test.runner.AndroidJUnit4;
import com.example.szakdolg.activity.MainActivity;
import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

   @Rule
   public ActivityTestRule<MainActivity> mActivityTestRule =
      new ActivityTestRule<>(MainActivity.class);

   @Rule
   public GrantPermissionRule mGrantPermissionRule = GrantPermissionRule.grant(
      "android.permission.READ_EXTERNAL_STORAGE",
      "android.permission.WRITE_EXTERNAL_STORAGE"
   );

   @Test
   public void mainActivityTest() {
      // Added a sleep statement to match the app's execution delay.
      // The recommended way to handle such scenarios is to use Espresso idling resources:
      // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
      try {
         Thread.sleep(500);
      } catch (InterruptedException e) {
         e.printStackTrace();
      }

      ViewInteraction appCompatEditText = onView(
         allOf(
            withId(R.id.edtLgnEmail),
            childAtPosition(
               childAtPosition(
                  withClassName(is("android.widget.ScrollView")),
                  0
               ),
               0
            )
         )
      );
      appCompatEditText.perform(scrollTo(), click());

      ViewInteraction appCompatEditText2 = onView(
         allOf(
            withId(R.id.edtLgnEmail),
            childAtPosition(
               childAtPosition(
                  withClassName(is("android.widget.ScrollView")),
                  0
               ),
               0
            )
         )
      );
      appCompatEditText2.perform(
         scrollTo(),
         replaceText("szalaygergely@gmail.com"),
         closeSoftKeyboard()
      );

      ViewInteraction appCompatEditText3 = onView(
         allOf(
            withId(R.id.edtLgnPass),
            childAtPosition(
               childAtPosition(
                  withClassName(is("android.widget.ScrollView")),
                  0
               ),
               1
            )
         )
      );
      appCompatEditText3.perform(
         scrollTo(),
         replaceText("mmnvjt"),
         closeSoftKeyboard()
      );

      ViewInteraction appCompatButton = onView(
         allOf(
            withId(R.id.btnLgnLogin),
            withText("Login"),
            childAtPosition(
               childAtPosition(
                  withClassName(is("android.widget.ScrollView")),
                  0
               ),
               2
            )
         )
      );
      appCompatButton.perform(scrollTo(), click());

      // Added a sleep statement to match the app's execution delay.
      // The recommended way to handle such scenarios is to use Espresso idling resources:
      // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
      try {
         Thread.sleep(1000);
      } catch (InterruptedException e) {
         e.printStackTrace();
      }

      ViewInteraction textView = onView(
         allOf(
            withText("SzakDolg"),
            withParent(
               allOf(
                  withId(R.id.messageBoardToolbar),
                  withParent(
                     IsInstanceOf.<View>instanceOf(
                        android.widget.RelativeLayout.class
                     )
                  )
               )
            ),
            isDisplayed()
         )
      );
      textView.check(matches(withText("SzakDolg")));
   }

   private static Matcher<View> childAtPosition(
      final Matcher<View> parentMatcher,
      final int position
   ) {
      return new TypeSafeMatcher<View>() {
         @Override
         public void describeTo(Description description) {
            description.appendText(
               "Child at position " + position + " in parent "
            );
            parentMatcher.describeTo(description);
         }

         @Override
         public boolean matchesSafely(View view) {
            ViewParent parent = view.getParent();
            return (
               parent instanceof ViewGroup &&
               parentMatcher.matches(parent) &&
               view.equals(((ViewGroup) parent).getChildAt(position))
            );
         }
      };
   }
}
